--- a/index.html
+++ b/index.html
@@ -5,31 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
+
 </head>
 
 <body>
     <div class="conteiner">
-        <div class="header">
+
+        <div class="header center">
             <div class="header_logo">
                 <img src="img/Heder-logo.png" alt="header_logo">
                 <p class="header_logo_text">Grow<span class="orange_text">Be</span>
                 </p>
             </div>
+
             <nav class="header_menu">
-                <a href="#" class="header_menu_link orange_text">Home</a>
-                <a href="#" class="header_menu_link">About Us</a>
-                <a href="#" class="header_menu-link">Services</a>
-                <a href="#" class="header_menu_link">Features
+                <a href="#" class="header_menu_link orange_text font">Home</a>
+                <a href="#" class="header_menu_link padding">About Us</a>
+                <a href="#" class="header_menu_link padding">Services</a>
+                <a href="#" class="header_menu_link padding">Features
                     <img src="img/Features.svg" alt="vector-features">
                 </a>
-                <a href="#" class="header_menu_link">Team</a>
-                <a href="#" class="header_menu_link">Blog</a>
-                <a href="#" class="header_menu_link">Contact</a>
+                <a href="#" class="header_menu_link padding">Team</a>
+                <a href="#" class="header_menu_link padding">Blog</a>
+                <a href="#" class="header_menu_link padding">Contact</a>
             </nav>
         </div>
 
-        <div class="top_content">
+        <div class="top_content center">
             <div class="top_text">
                 <h1 class="top_title">SEO & Digital Marketing For Your Website.</h1>
                 <h2 class="top_sub_title">Provide all kind of seo services and help to improve seo ranking. Globally
@@ -42,7 +46,7 @@
             <img class="top_img" src="./img/top.png" alt="top picture">
         </div>
 
-        <nav class="top_logo">
+        <nav class="top_logo center">
             <a href="#" class="logo">
                 <img src="img/brend1.png" alt="brand logo">
             </a>
