--- a/index.html
+++ b/index.html
@@ -78,13 +78,14 @@
                 </svg>
                 <h2 class="business_item_topic">Grow Your Business</h2>
                 <p class="business_item_text">Leverage agile frameworks to provide a robust synopsis for high level
-                    overviews. <span id="dots"></span>... <span id="more">Lorem ipsum, dolor sit amet consectetur
+                    overviews. <span id="dots0"></span>... <span id="more0" class="display_none">Lorem ipsum, dolor sit
+                        amet consectetur
                         adipisicing elit. Quae
                         doloremque, odio saepe culpa nobis accusamus sed, atque vitae quo reiciendis nam. Perferendis
                         nesciunt ipsum quod dolores laudantium optio, saepe voluptatibus!
                     </span>
                 </p>
-                <button class="btn_more" id="btn" onclick="readMore()">Read More...</button>
+                <button class="btn_more" id="btn0" onclick="readMore(this.id)">Read More...</button>
             </div>
 
             <div class="business_item">
@@ -96,9 +97,14 @@
                 </svg>
                 <h2 class="business_item_topic">Get Quality Ieads</h2>
                 <p class="business_item_text">Leverage agile frameworks to provide a robust synopsis for high level
-                    overviews.
+                    overviews. <span id="dots1"></span>... <span id="more1" class="display_none">Lorem ipsum, dolor sit
+                        amet consectetur
+                        adipisicing elit. Quae
+                        doloremque, odio saepe culpa nobis accusamus sed, atque vitae quo reiciendis nam. Perferendis
+                        nesciunt ipsum quod dolores laudantium optio, saepe voluptatibus!
+                    </span>
                 </p>
-                <button class="btn_more">Read More...</button>
+                <button class="btn_more" id="btn1" onclick="readMore(this.id)">Read More...</button>
             </div>
 
             <div class="business_item">
@@ -113,9 +119,14 @@
                 </svg>
                 <h2 class="business_item_topic">Drive More Sales</h2>
                 <p class="business_item_text">Leverage agile frameworks to provide a robust synopsis for high level
-                    overviews.
+                    overviews. <span id="dots2"></span>... <span id="more2" class="display_none">Lorem ipsum, dolor sit
+                        amet consectetur
+                        adipisicing elit. Quae
+                        doloremque, odio saepe culpa nobis accusamus sed, atque vitae quo reiciendis nam. Perferendis
+                        nesciunt ipsum quod dolores laudantium optio, saepe voluptatibus!
+                    </span>
                 </p>
-                <button class="btn_more">Read More...</button>
+                <button class="btn_more" id="btn2" onclick="readMore(this.id)">Read More...</button>
             </div>
 
         </div>
