--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
     <script src="./js/app.js" defer></script>
 </head>
@@ -88,7 +87,7 @@
                 <button class="btn_more" id="btn0" onclick="readMore(this.id)">Read More...</button>
             </div>
 
-            <div class="business_item">
+            <div class="business_item box_shadow">
                 <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" viewBox="0 0 70 70" fill="none">
                     <rect width="70" height="70" rx="15" fill="#149211" fill-opacity="0.28" />
                     <path
@@ -151,7 +150,7 @@
                     </button>
                 </div>
 
-                <div class="services_top_item">
+                <div class="services_top_item box_shadow1">
                     <img class="services_top_img" src="img/Оптимизация.png" alt="optimization">
                     <h2 class="services_title_two">Seo Optimazadion</h2>
                     <p class="services_top_text">Business applications through revolutionary catalysts for chang the
